force-app/main/default/objects/TrackIT__Work_Order__c/TrackIT__Work_Order__c.object-meta.xml
<CustomObject>
    <label>Work Order</label>
    <nameField>
        <label>Work Order Desc</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>