force-app/main/default/objects/TrackIT__Work_Order__c/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <defaultValue>&quot;z&quot;</defaultValue>
    <label>Priority Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>