force-app/main/default/objects/TrackIT__Work_Order__c/fields/Repair_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Repair_Item_Description__c</fullName>
    <label>Description of Item to be Repaired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>