force-app/main/default/objects/TrackIT__Work_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair Needed</fullName>
                <default>true</default>
                <label>Repair Needed</label>
            </value>
            <value>
                <fullName>Parts To Be Ordered</fullName>
            </value>
            <value>
                <fullName>Parts Ordered</fullName>
            </value>
            <value>
                <fullName>In Repair</fullName>
            </value>
            <value>
                <fullName>Can&apos;t Be Fixed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>