force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>