force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Completed_By__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>