force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Completed_Date_Time__c</fullName>
    <label>Completed Date Time</label>
    <type>DateTime</type>
</CustomField>