force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Expected_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Expected_End_Date_Time__c</fullName>
    <label>Expected End Date Time</label>
    <type>DateTime</type>
</CustomField>