force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Expected_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Expected_Start_Date_Time__c</fullName>
    <label>Expected Start Date Time</label>
    <type>DateTime</type>
</CustomField>