force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Order_Date__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Order_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>