force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Request_Priority__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Request_Priority__c</fullName>
    <label>Request Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>4. Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>3. Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>2. High</label>
            </value>
            <value>
                <fullName>Urgent</fullName>
                <label>1. Urgent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>