force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Requested_By__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Requested_By__c</fullName>
    <label>Requested By</label>
    <length>35</length>
    <type>Text</type>
</CustomField>