force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Requester_Email__c</fullName>
    <label>Requester Email</label>
    <type>Email</type>
</CustomField>