force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Requester_Phone__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Requester_Phone__c</fullName>
    <label>Requester Phone</label>
    <type>Phone</type>
</CustomField>