force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Work_Location__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Work_Location__c</fullName>
    <label>Work Location</label>
    <type>TextArea</type>
</CustomField>