force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Work_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Work_Order_ID__c</fullName>
    <label>Work Order ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>