force-app/main/default/objects/TrackIT__Work_Order__c/fields/TrackIT__Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Work_Performed__c</fullName>
    <label>Work Performed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>