force-app/main/default/objects/TrackIT__Work_Order__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Expected_Start_Date_Time__c</columns>
    <columns>TrackIT__Expected_End_Date_Time__c</columns>
    <columns>TrackIT__Completed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>