force-app/main/default/objects/TrackIT__Work_Order__c/listViews/TrackIT__Completed_Work_Orders.listView-meta.xml
<ListView>
    <fullName>TrackIT__Completed_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Expected_Start_Date_Time__c</columns>
    <columns>TrackIT__Expected_End_Date_Time__c</columns>
    <columns>TrackIT__Completed__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TrackIT__Completed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Completed Work Orders</label>
    <language>en_US</language>
</ListView>