force-app/main/default/objects/TrackIT__Work_Order__c/listViews/TrackIT__Open_Work_Orders.listView-meta.xml
<ListView>
    <fullName>TrackIT__Open_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Request_Priority__c</columns>
    <columns>Repair_Item_Description__c</columns>
    <columns>TrackIT__Expected_End_Date_Time__c</columns>
    <columns>TrackIT__Completed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TrackIT__Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Work Orders</label>
</ListView>